fixes #621 Double scroll

--- a/src/main/web/skin/notification-center.css
+++ b/src/main/web/skin/notification-center.css
@@ -7,7 +7,6 @@
 	background-color: #404040;
 	color: #fff;
 	z-index: 100000;
-	overflow-x: auto;
 }
 
 .notification_item {
